# code

./: .gitignore  .gitmodules  Cargo.toml
apps/battleship-detector/: .gitignore  battleship_detector.py  blob-detect.py  cnn_model.pt  cnn_model_deep.pt  cnn_model_yolo.pt  pyproject.toml
apps/battleship-generator/: .gitignore  main.py  pyproject.toml
apps/blurgen/: README.md  blurgen.py
apps/blurgen/doc/: out.yuv422
apps/camera-stream/: main.py  pyproject.toml
apps/capture/: Cargo.toml  fake-vga.pgm  show.py
apps/capture/src/: main.rs
apps/client-tui/: Cargo.toml
apps/client-tui/src/: main.rs
apps/dashboard/: grafana.json  index.html  package.json  start.sh
apps/dashboard/backend/: Cargo.toml
apps/dashboard/backend/src/: main.rs
apps/dashboard/frontend/: eslint.config.js  package-lock.json  package.json
apps/dashboard/src/: App.tsx  backscatter.ts  sensors.ts
apps/db-logger/: Cargo.toml
apps/db-logger/src/: main.rs
apps/flasher/: Cargo.toml
apps/flasher/src/: file.rs  main.rs
apps/motherboard/: Cargo.toml
apps/motherboard/src/: backscatter_server.rs  main.rs
apps/nvmedit/: Cargo.toml
apps/nvmedit/src/: main.rs  user.rs
apps/photobooth/: emails.txt  photobooth.py
apps/protoview/: .gitignore  generate_proto.sh  requirements.txt  sensor_pb2.py  sensor_pb2.pyi  tui.py
apps/protoview/sensor/: alerts_pb2.py  alerts_pb2.pyi  camera_pb2.py  camera_pb2.pyi  fpga_pb2.py  fpga_pb2.pyi  measure_pb2.py  measure_pb2.pyi  parameters_pb2.py  parameters_pb2.pyi
apps/sensor-server/: Cargo.toml
apps/sensor-server/src/: main.rs  status.rs
apps/sobel-model/: .gitignore  README.md  requirements.txt  sobel.py  sobel_out.py
apps/spi-stream/: frame_qvga.raw  img.py  main.py  pyproject.toml
apps/spiview/: Cargo.toml
apps/spiview/src/: main.rs
boards/: README.md
boards/base-station/: platformio.ini
boards/base-station/src/: main.cpp
boards/base-station/test/: tests.cpp
boards/camera-stream/: pinout.txt  platformio.ini
boards/camera-stream-mock/: platformio.ini
boards/camera-stream-mock/lib/: cobs
boards/camera-stream-mock/src/: main.cpp
boards/camera-stream/lib/: ov7670
boards/camera-stream/serial-dump/: dump.py  requirements.txt
boards/camera-stream/src/: main.cpp
boards/cc1101_test/src/: main.cpp
boards/demo/m25pe-test/: README
boards/demo/nucleo-u0-backscatter/: README.md  boards  nucleo-u0-backscatter.ioc
boards/demo/nucleo-u083-blink/: .gitignore  boards  nucleo-u083-blink.ioc  post_cubemx.sh
boards/demo/u0-usb-demo/: STM32U083xx_RAM.ld  platformio.ini
boards/fpga/: README.md
boards/m25pe-test/: platformio.ini
boards/m25pe-test/lib/: pin
boards/m25pe-test/src/: main.cpp
boards/motherboard/: .gitignore  STM32G0B1VETX_FLASH.ld  STM32G0B1VETX_RAM.ld  motherboard.ioc  platformio.ini  post_cubemx.sh
boards/motherboard/Inc/: FreeRTOSConfig.h  main.h  spi.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  tasks.hpp  usb_device.h  usb_drd_fs.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
boards/motherboard/lib/: adf5355  macros  periph  tmp126  tps1h100  tps274160b  util
boards/motherboard/src/: adc.c  app_freertos.c  dac.c  gpio.c  main.c  spi.c  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  syscalls.c  sysmem.c  system_stm32g0xx.c  tasks.cpp  tim.c  usart.c  usb_device.c  usb_drd_fs.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
boards/nucleo-u0-backscatter/: Makefile  nucleo-u0-backscatter.ioc  platformio.ini
boards/nucleo-u0-backscatter/Src/: README.md  (+5 more)
boards/nucleo-u083-blink/: README.md  platformio.ini
boards/sensor/: README.md  STM32U083xx_FLASH.ld  platformio.ini  post_cubemx.sh  sensor.ioc
boards/sensor-mcu/: platformio.ini
boards/sensor-rs/: Cargo.toml  README.md  build.rs  memory.x  objcopy.sh  rust-toolchain.toml
boards/sensor-rs/.cargo/: config.toml
boards/sensor-rs/src/: camera.rs  clock.rs  comms.rs  debug_led.rs  flash.rs  fpga.rs  main.rs  memory.rs  nvm.rs  power.rs  rcc.rs  resources.rs  sensors.rs  serial.rs  state_machine.rs
boards/sensor-rs/src/camera/: interface.rs  sccb.rs
boards/sensor-rs/src/camera/sccb/: reg.rs
boards/sensor-rs/src/flash/: spiflash.rs
boards/sensor-rs/src/flash/spiflash/: id.rs
boards/sensor-rs/src/flow/: change_signal.rs  debounce.rs  mod.rs  poll.rs  state.rs
boards/sensor-rs/src/fpga/: flash.rs  spi_cmd.rs
boards/sensor-rs/src/fpga/flash/: layout.rs  spiflash.rs
boards/sensor-rs/src/fpga/flash/spiflash/: command.rs  id.rs
boards/sensor-rs/src/sensors/: calibration.rs
boards/spi-connect/: pinout.md  pinout.txt  platformio.ini
boards/spi-flash/: README.md  platformio.ini  post_cubemx.sh  spi-flash.ioc
boards/u0-usb-demo/: .gitignore  README.md  platformio.ini  u0-usb-demo.ioc
deliverables/bib/: README.md
lib/: README.md
lib/adf5355/: adf5355.cpp  adf5355.hpp
lib/adl6331/: adl6331.cpp  adl6331.hpp
lib/cc1101/: cc1101.cpp  cc1101.hpp
lib/cobs/: cobs.cpp  cobs.hpp  cobs.tpp
lib/m25pe/: m25pe.cpp  m25pe.hpp
lib/macros/: common_macros.hpp
lib/ov7670/: ov7670.hpp
lib/periph/: analog_input.hpp  analog_output.hpp  digital.hpp  pwm.hpp  spi.hpp
lib/pin/: arduino_digital.hpp  digital.hpp  spi_master.hpp
lib/python/cobs/: pyproject.toml
lib/python/cobs/src/cobs/: __init__.py
lib/python/cobs/tests/: test_cobs.py
lib/rust/amber-connect/: Cargo.toml
lib/rust/amber-connect/src/: codec.rs  control.rs  endpoint.rs  lib.rs
lib/rust/amber-connect/src/codec/: json.rs  pb.rs
lib/rust/amber-connect/src/control/: client.rs  lease.rs  messages.rs  server.rs
lib/rust/serial/: Cargo.toml
lib/rust/serial/src/: codec.rs  lib.rs
lib/tmp126/: tmp126.cpp  tmp126.hpp
lib/tps1h100/: tps1h100.cpp  tps1h100.hpp
lib/tps274160b/: tps274160b.cpp  tps274160b.hpp
proto/: backscatter.proto  base_station.options  base_station.proto  sensor.options  sensor.proto  sensor.toml  spi_flash.options  spi_flash.proto  state.proto
proto/sensor/: alerts.proto  backscatter.proto  camera.proto  flash.proto  fpga.proto  fpga.toml  measure.proto  nvm.proto  nvm.toml  parameters.proto  sensor.options  sensor.proto  state.proto
(+153 files in other folders)
