[workspace]
resolver = "3"
members = [
    "apps/sensor-server",
    "apps/capture",
    "apps/client-tui",
    "apps/dashboard/backend",
    "apps/flasher",
    "lib/rust/amber-connect",
    "lib/rust/flash-layout",
    "lib/rust/influx",
    "lib/rust/proto",
    "lib/rust/serial-sync", "lib/rust/serial",
]

[workspace.lints.clippy]
pedantic = "warn"
