[workspace]
resolver = "3"
members = [
    "apps/capture",
    "apps/client-tui",
    "apps/dashboard/backend",
    "apps/db-logger",
    "apps/flasher",
    "apps/sensor-server", "apps/spiview",
    "lib/rust/amber-connect",
    "lib/rust/flash-layout",
    "lib/rust/influx",
    "lib/rust/proto",
    "lib/rust/serial",
]

[workspace.lints.clippy]
pedantic = "warn"
