[project]
name = "camera-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cobs",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pyserial>=3.5",
]

[tool.uv.sources]
cobs = { path = "../../lib/python/cobs", editable = true }
