[package]
name = "client-tui"
description = "Simply view the status"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-connect = { version = "0.1.0", path = "../../lib/rust/amber-connect" }
prost = "0.14.3"
proto = { version = "0.1.0", path = "../../lib/rust/proto" }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt"] }
zeromq = "0.5.0"

[lints]
workspace = true
