[package]
name = "client-tui"
description = "Simply view the status"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-connect = { version = "0.1.0", path = "../../lib/rust/amber-connect" }
anyhow = "1.0.102"
crossterm = "0.29.0"
futures = "0.3.32"
prost = "0.14.3"
proto = { version = "0.1.0", path = "../../lib/rust/proto" }
ratatui = "0.30.0"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt"] }
tokio-util = "0.7.18"
zeromq = "0.5.0"

[lints]
workspace = true
