[package]
name = "db-logger"
description = "Log sensor statuses to Influx"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-connect = { version = "0.1.0", path = "../../lib/rust/amber-connect" }
anyhow = "1.0.102"
influx = { version = "0.1.0", path = "../../lib/rust/influx" }
proto = { version = "0.1.0", path = "../../lib/rust/proto" }
tokio = "1.50.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeromq = "0.5.0"

[lints]
workspace = true
