[package]
name = "flasher"
description = "Flash files to the sensor's SPI memory"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
cobs = "0.5.1"
crc = "3.4.0"
flash-layout = { version = "0.1.0", path = "../../lib/rust/flash-layout" }
indicatif = "0.18.4"
prost = "0.14.3"
proto = { version = "0.1.0", path = "../../lib/rust/proto" }
serial-sync = { version = "0.1.0", path = "../../lib/rust/serial-sync" }
serialport = { version = "4.8.1", features = ["usbportinfo-interface"] }

[build-dependencies]
prost-build = "0.14.3"
