[package]
name = "nvmedit"
version = "0.1.0"
edition = "2024"

[dependencies]
amber-connect = { version = "0.1.0", path = "../../lib/rust/amber-connect" }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
proto = { version = "0.1.0", path = "../../lib/rust/proto" }
sccb = { version = "0.1.0", path = "../../lib/rust/sccb", features = ["hash", "serde"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt"] }
zeromq = "0.5.0"

[lints]
workspace = true
