[project]
name = "spi-stream"
version = "0.1.0"
description = "Read COBS SPI reply packets from Arduino and print"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cobs",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pyserial>=3.5",
]

[tool.uv.sources]
cobs = { path = "../../lib/python/cobs", editable = true }
