[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
influx = { version = "0.1.0", path = "../../../lib/rust/influx" }
proto = { version = "0.1.0", path = "../../../lib/rust/proto" }
rand = "0.10.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints]
workspace = true
