[package]
name = "amber-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
prost = "0.14.3"
proto = { version = "0.1.0", path = "../proto" }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["sync"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
zeromq = { version = "0.5.0", default-features = false, features = ["tokio-runtime"] }

[lints]
workspace = true
