[package]
name = "serial"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
cobs = "0.5.1"
futures = "0.3.32"
prost = "0.14.3"
tokio = { version = "1.50.0", features = ["io-util", "macros", "rt"] }
tokio-serial = { version = "5.4.5", features = ["codec", "rt"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"

[lints]
workspace = true
